--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -8,6 +8,37 @@
     <h4>Thank you for your order!</h4>
   </div>
 
+  <div class="order-summary jumbotron">
+    <div class="panel panel-default items">
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th colspan="2">Product</th>
+            <th>Unit Price</th>
+            <th>Quantity</th>
+            <th>Price</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @order_total = 0 %>
+          <% @line_items.each do |product| %>
+            <%= render 'item', product_id: product.product_id, quantity: product.quantity%>
+          <% end %>
+        </tbody>
+        <tfoot>
+          <tr>
+            <th colspan="4">
+              TOTAL:
+            </th>
+            <th>
+              $<%= @order_total.round(2) %>
+            </th>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
+  </div>
+
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 
 </section>
