--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -46,6 +46,22 @@
         </div>
       </div>
     <% end %>
+    
+    <% unless current_user.nil? %>
+        <div class="row">
+          <%= form_for @review, url: product_reviews_path(@product) do |f| %>
+            <div class="form-group">
+              <label>New Review:</label>
+              <%= f.text_area :description, size: "1x4", :class => "form-control" %>
+            </div>
+            <div class="form-group">
+              <label>Select Rating:</label>
+              <%= f.select :rating, [1,2,3,4,5] %>
+            </div>
+            <%= f.submit "Submit", :class => "btn btn-primary btn-lg" %>
+          <% end %>
+        </div>
+    <% end %>
 
   </article>
 
